<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_connect"
        android:icon="@drawable/ic_link"
        android:title="@string/action_connect" />

    <item
        android:id="@+id/action_details"
        android:icon="@drawable/ic_info"
        android:title="@string/action_view_details" />

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_bookmark_border"
        android:title="@string/action_save" />

    <item
        android:id="@+id/action_unsave"
        android:icon="@drawable/ic_bookmark"
        android:title="@string/action_unsave"
        android:visible="false" />

    <item
        android:id="@+id/action_copy_ip"
        android:icon="@drawable/ic_copy"
        android:title="@string/action_copy_ip" />

    <item
        android:id="@+id/action_copy_mac"
        android:icon="@drawable/ic_copy"
        android:title="@string/action_copy_mac" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/action_delete" />

</menu>
