<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:layoutDirection="locale"
    tools:context=".ui.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        app:elevation="0dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/background"
            app:title="@string/app_name"
            app:titleTextAppearance="@style/TextAppearance.Controller.Title"
            app:menu="@menu/menu_main" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tab_height"
            android:background="@color/background"
            app:tabGravity="fill"
            app:tabMode="fixed"
            app:tabIndicatorColor="@color/tab_indicator"
            app:tabIndicatorHeight="@dimen/tab_indicator_height"
            app:tabIndicatorFullWidth="false"
            app:tabSelectedTextColor="@color/tab_selected"
            app:tabTextColor="@color/tab_unselected"
            app:tabRippleColor="@color/card_ripple"
            app:tabTextAppearance="@style/TextAppearance.Controller.Tab">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_saved_devices"
                android:icon="@drawable/ic_bookmark" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_discovered_devices"
                android:icon="@drawable/ic_wifi_find" />

        </com.google.android.material.tabs.TabLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:background="@color/divider" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:padding="@dimen/spacing_sm"
                android:scrollbars="vertical"
                tools:listitem="@layout/item_device" />

            <!-- Empty State -->
            <LinearLayout
                android:id="@+id/emptyState"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/spacing_xxl"
                android:visibility="gone"
                tools:visibility="visible">

                <ImageView
                    android:id="@+id/emptyIcon"
                    android:layout_width="@dimen/empty_icon_size"
                    android:layout_height="@dimen/empty_icon_size"
                    android:src="@drawable/ic_wifi_find"
                    android:tint="@color/text_hint"
                    android:contentDescription="@null" />

                <TextView
                    android:id="@+id/emptyTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_xl"
                    android:text="@string/empty_discovered_title"
                    android:textAppearance="@style/TextAppearance.Controller.Title"
                    android:textAlignment="center"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/emptySubtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_sm"
                    android:maxWidth="@dimen/empty_max_width"
                    android:text="@string/empty_discovered_subtitle"
                    android:textAppearance="@style/TextAppearance.Controller.Body"
                    android:textAlignment="center"
                    android:gravity="center" />

            </LinearLayout>

        </FrameLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"
        android:contentDescription="@string/action_scan"
        android:src="@drawable/ic_refresh"
        app:backgroundTint="@color/fab_background"
        app:tint="@color/fab_icon"
        app:shapeAppearance="@style/ShapeAppearance.Controller.FAB" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
